feat: Add support for table values constructor. Ie. (   VALUE (1,2,3)   ,     (4,5,6) ) x (a,b,c) fix: Misc fixes in column resolving
BREAKING CHANGE: Now the keyword "values" is not a viable identifier for columns etc. without quoting